# device_and_agent_management

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
backend/: .coveragerc  alembic.ini  backend.dockerfile  backend.dockerfile.dev  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/old_versions/: 1277372ab9f9_added_reverse_relationship_on_user_.py  256b25a02536_remove_permission_tables.py  3369a7a2fde5_ensured_foreign_key_to_user_is_not_.py  36be7e3cbba9_first_migration.py  48fec505afa9_renamed_column_from_route_name_to_name.py  4e78738984e1_added_new_method_column_to_route_table.py  5d89ac18c757_add_usertype_model.py  67a4aa772095_added_routes_table_along_with_link_.py  6a8ff81980ff_add_created_at_and_updated_at_.py  7380cb66ffb0_added_email_table.py  7cb162e05f64_renamed_field_on_users_model_from_.py  882daf9ea29f_set_up_device_table_as_well_as_many_to_.py  8bba44819b40_renamed_field_on_users_model_from_.py  9b275f3da0c0_add_column_is_superuser_to_user_model.py  9cd84aac06d0_renamed_field_on_users_model_from_.py  a1872115b09d_added_unique_constraint_on_usertype_s_.py  af4c8b6033d5_refactored_routes_model_to_become_.py  b9962f7b26f7_added_new_path_regex_column_to_route_.py  dd31b1ec0f9e_add_created_at_and_updated_at_.py  deaacdfb29e8_add_self_reference_to_user_table_to_.py  df4fb92ad2b1_renamed_field_on_users_model_to_devices_.py  fffed997c5ab_add_column_is_active_and_is_super_user_.py
backend/alembic/versions/: 079f3b383c35_added_column_password_reset_token.py  0b31b05f6561_added_password_reset_token_model.py  2cd66c083aac_added_unique_constraint_to_mac_id_to_.py  3848546b5695_added_agent_id_as_foreign_key_on_device_.py  42814233dda6_added_self_reference_on_user_table_to_.py  471caecad289_added_deleted_column_to_user_table.py  7be8e47022a4_add_agent_id_field_to_device_to_note_.py  817e3d16846a_added_agent_table.py  8c27593f685f_added_apikey_table.py  8f23505131e1_name_column_to_device_table.py  91bb360a5dac_retired_user_model_column_is_superuser.py  (+4 more)
backend/app/: main.py
backend/app/db/: base.py  (+4 more)
backend/scripts/: start.sh  test.sh
backend/tests/: __init__.py  conftest.py  utils.py
worker/: .env.example  config.py  main.py  pyproject.toml  worker.dockerfile  worker.dockerfile.dev
worker/db/: client.py
worker/tests/: test_log_repository.py
(+96 files in other folders)
