[tool.poetry]
name = "device-agent-mgmt-worker"
version = "0.1.0"
description = ""
authors = ["Alexander Adeedeji <alexadedeji15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "3.11.1"
pika = "1.1.0"
loguru = "0.5.1"
starlette = "0.14.1"
pydantic ="1.7.2"


[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

